poke/testsuite/poke.pkl/if-diag-3.pk
/* { dg-do compile } */

if ([1,2,3])  /* { dg-error "expected boolean" } */
  {
  }
